prodMetadata/src/objects/Product2.object
<CustomObject>
    <fields>
        <fullName>stayclassy__Charity_Donation_Percentage__c</fullName>
        <description>Percentage of ticket price that is considered donation to campaign</description>
        <label>Deductible Percentage</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>stayclassy__Classy_API_Request__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The most recent API request that modfied this Campaign</description>
        <label>Classy API Request</label>
        <referenceTo>stayclassy__Classy_API_Request__c</referenceTo>
        <relationshipLabel>Products</relationshipLabel>
        <relationshipName>Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>stayclassy__Classy_Campaign_ID__c</fullName>
        <description>The Classy Campaign/Event ID</description>
        <label>Classy Campaign ID</label>
        <precision>12</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>stayclassy__Classy_Campaign__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Classy Campaign</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Products</relationshipLabel>
        <relationshipName>Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>stayclassy__Classy_Product_ID__c</fullName>
        <externalId>true</externalId>
        <label>Classy Product ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>stayclassy__Deductible_Amount__c</fullName>
        <description>Amount of ticket price that is considered donation to campaign</description>
        <label>Deductible Amount</label>
        <precision>9</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>stayclassy__Ended_At__c</fullName>
        <description>Indicates the date and time that a ticket/registration will no longer be available for purchase.</description>
        <label>Ended At</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>stayclassy__Entries_Per_Ticket__c</fullName>
        <description>How many entries a ticket/registration of this type grants to a purchaser</description>
        <label>Entries Per Ticket</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>stayclassy__Is_Classy_Mode__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether ticket/registration of this type qualifies for Classy Mode pricing</description>
        <label>Is Classy Mode</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>stayclassy__Max_Per_Transaction__c</fullName>
        <description>The maximum tickets/registrations of this type that must be purchased in a single transaction</description>
        <label>Max Per Transaction</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>stayclassy__Min_Per_Transaction__c</fullName>
        <description>The minimum tickets/registrations of this type that must be purchased in a single transaction</description>
        <label>Min Per Transaction</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>stayclassy__Quantity_Available__c</fullName>
        <description>Indicates the number of ticket/registrations available to be purchased</description>
        <label>Quantity Available</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>stayclassy__Started_At__c</fullName>
        <description>Indicates the date and time after which a ticket/registration will be available for purchase.</description>
        <label>Started At</label>
        <type>DateTime</type>
    </fields>
    <listViews>
        <fullName>AllProducts</fullName>
        <filterScope>Everything</filterScope>
        <label>All Products</label>
    </listViews>
    <listViews>
        <fullName>stayclassy__All_Classy_Products</fullName>
        <columns>PRODUCT2.NAME</columns>
        <columns>PRODUCT2.CUSTOMER_PRODUCT_ID</columns>
        <columns>stayclassy__Classy_Campaign__c</columns>
        <columns>PRODUCT2.DESCRIPTION</columns>
        <columns>stayclassy__Charity_Donation_Percentage__c</columns>
        <columns>stayclassy__Classy_Product_ID__c</columns>
        <columns>PRODUCT2.ACTIVE</columns>
        <columns>stayclassy__Quantity_Available__c</columns>
        <columns>PRODUCT2.LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>stayclassy__Classy_Product_ID__c</field>
            <operation>greaterThan</operation>
            <value>0</value>
        </filters>
        <label>All Classy Products</label>
    </listViews>
    <recordTypes>
        <fullName>CnP_PaaS__C_P_Online</fullName>
        <active>true</active>
        <label>C&amp;P Online</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>